# RNlogss

./: App.tsx  README.md  app.json  package-lock.json  package.json
__tests__/: CrashAndBreadcrumb.test.ts  ExceptionCollector.test.ts
android/: build_log.txt  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/rnlogss/: MainActivity.kt  MainApplication.kt  RNLogsModule.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
cpp/core/: ArenaAllocator.h  CrashHandlerAndroid.cpp  LogQueue.cpp  LogQueue.h  LogSerializer.cpp  LogSerializer.h
cpp/jsi/: RNLogsJSIBinding.cpp  RNLogsJSIBinding.h
cpp/tests/: CMakeLists.txt  run_tests.cpp
cpp/utils/: Compression.cpp  Crypto.cpp  Crypto.h
doc/: jsi-bridgeless-mounting-fix.md  jsi-integration-troubleshooting.md  jsi-packaging-troubleshooting-guide.md  log-api-spec.md  roadmap-4phases.md
ios/: CrashHandlerIOS.mm  Podfile
ios/RNlogss/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  RNLogsModule.h
ios/RNlogss.xcodeproj/: project.pbxproj
ios/RNlogss.xcodeproj/xcshareddata/xcschemes/: RNlogss.xcscheme
proto/: batch.proto  log_event.proto
screens/: Phase1Screen.tsx  Phase2Screen.tsx  shared.tsx
scripts/: build-android-repack.sh  build-android.sh
src/: RNLogsModule.ts  index.ts  types.ts
src/collectors/: ApiCollector.ts  ExceptionCollector.ts
src/core/: LogBatcher.ts  LogQueue.ts
src/native/: NoOpNativeModule.ts
src/specs/: NativeRNLogs.ts
src/uploader/: UploadConfig.ts  UploadQueue.ts  Uploader.ts
